# SecurDoor

./: .gitignore  crowdin.yml
.github/workflows/: crowdin_download.yml  crowdin_upload.yml  release.yml
app/: .env.example  Dockerfile  docker-compose.yml  drizzle.config.ts  next.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts
app/src/: env.js
app/src/app/: layout.tsx  not-found.tsx  page.tsx
app/src/components/: footer.tsx  header.tsx  language-switcher.tsx
app/src/config/: demo.ts  device-statuses.tsx  logs.tsx  navigation.ts
app/src/hooks/: use-log.tsx  (+6 more)
device/: .gitignore  CMakeLists.txt  platformio.ini
device/lib/device-control/: SecurDoor_DeviceControl.cpp  SecurDoor_DeviceControl.hpp
device/lib/global_servo/: global_servo.cpp  global_servo.hpp
device/lib/globals/: SecurDoor_Globals.cpp  SecurDoor_Globals.hpp
device/lib/messaging-service/: SecurDoor_MessagingService.cpp  SecurDoor_MessagingService.hpp
device/lib/messagingservice/: SecurDoor_MessagingService.cpp  SecurDoor_MessagingService.hpp
device/lib/remote-connection/: SecurDoor_RemoteConnection.cpp  SecurDoor_RemoteConnection.hpp
device/lib/rfid-service/: SecurDoor_RFIDService.cpp  SecurDoor_RFIDService.hpp
device/lib/rsa-keys/: SecurDoor_RSAKeys.hpp
device/lib/rsakeys/: SecurDoor_RSAKeys.hpp
device/lib/time-keeping-service/: SecurDoor_TimeKeeping.cpp  SecurDoor_TimeKeeping.hpp
device/lib/timekeeping-service/: SecurDoor_TimeKeeping.cpp  SecurDoor_TimeKeeping.hpp
device/lib/wifi/: SecurDoor_WiFi.cpp  SecurDoor_WiFi.hpp
device/src/: main.cpp
(+338 files in other folders)
